--- a/serqq.html
+++ b/serqq.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>跳转 | 加入QQ群</title>
-    <link rel="shortcut icon" href="/assets/crous-icon.png" type="image/png">
-    <link rel="icon" href="/assets/crous-icon.png" type="image/png">
+    <link rel="shortcut icon" href="/assets/icon-lk.jpg" type="image/jpg">
+    <link rel="icon" href="/assets/icon-lk.png" type="image/jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
